Add some custom style definitions

--- a/sources/less/bootgenie.less
+++ b/sources/less/bootgenie.less
@@ -4,5 +4,15 @@
 	float: left;
 }
 
-#logo_container {
+.logo_name {
+	margin-right: 15px;
+}
+
+footer {
+	margin-top: 15px;
+}
+
+footer .container {
+	padding-top: 15px;
+	border-top: 1px solid @gray-lighter;
 }
