--- a/assets/css/bootgenie.css
+++ b/assets/css/bootgenie.css
@@ -255,8 +255,8 @@ th {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('../bootstrap-3.3.4/fonts/glyphicons-halflings-regular.eot');
-  src: url('../bootstrap-3.3.4/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../bootstrap-3.3.4/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../bootstrap-3.3.4/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../bootstrap-3.3.4/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../bootstrap-3.3.4/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('../bootstrap/fonts/glyphicons-halflings-regular.eot');
+  src: url('../bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../bootstrap/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
@@ -6575,4 +6575,14 @@ button.close {
 .logo,
 .logo_name {
   float: left;
+}
+.logo_name {
+  margin-right: 15px;
+}
+footer {
+  margin-top: 15px;
+}
+footer .container {
+  padding-top: 15px;
+  border-top: 1px solid #eeeeee;
 }
