--- a/sources/less/bootstrap.less
+++ b/sources/less/bootstrap.less
@@ -1,58 +1,58 @@
 // Customized Bootstrap LESS for Bootgenie
 
 // Core variables and mixins
-@import "../bootstrap-3.3.4/less/variables.less";
-@import "../bootstrap-3.3.4/less/mixins.less";
+@import "../bootstrap/less/variables.less";
+@import "../bootstrap/less/mixins.less";
 
 // Reset and dependencies
-@import "../bootstrap-3.3.4/less/normalize.less";
-@import "../bootstrap-3.3.4/less/print.less";
-@import "../bootstrap-3.3.4/less/glyphicons.less";
+@import "../bootstrap/less/normalize.less";
+@import "../bootstrap/less/print.less";
+@import "../bootstrap/less/glyphicons.less";
 
 // Core CSS
-@import "../bootstrap-3.3.4/less/scaffolding.less";
-@import "../bootstrap-3.3.4/less/type.less";
-@import "../bootstrap-3.3.4/less/code.less";
-@import "../bootstrap-3.3.4/less/grid.less";
-@import "../bootstrap-3.3.4/less/tables.less";
-@import "../bootstrap-3.3.4/less/forms.less";
-@import "../bootstrap-3.3.4/less/buttons.less";
+@import "../bootstrap/less/scaffolding.less";
+@import "../bootstrap/less/type.less";
+@import "../bootstrap/less/code.less";
+@import "../bootstrap/less/grid.less";
+@import "../bootstrap/less/tables.less";
+@import "../bootstrap/less/forms.less";
+@import "../bootstrap/less/buttons.less";
 
 // Components
-@import "../bootstrap-3.3.4/less/component-animations.less";
-@import "../bootstrap-3.3.4/less/dropdowns.less";
-@import "../bootstrap-3.3.4/less/button-groups.less";
-@import "../bootstrap-3.3.4/less/input-groups.less";
-@import "../bootstrap-3.3.4/less/navs.less";
-@import "../bootstrap-3.3.4/less/navbar.less";
-@import "../bootstrap-3.3.4/less/breadcrumbs.less";
-@import "../bootstrap-3.3.4/less/pagination.less";
-@import "../bootstrap-3.3.4/less/pager.less";
-@import "../bootstrap-3.3.4/less/labels.less";
-@import "../bootstrap-3.3.4/less/badges.less";
-@import "../bootstrap-3.3.4/less/jumbotron.less";
-@import "../bootstrap-3.3.4/less/thumbnails.less";
-@import "../bootstrap-3.3.4/less/alerts.less";
-@import "../bootstrap-3.3.4/less/progress-bars.less";
-@import "../bootstrap-3.3.4/less/media.less";
-@import "../bootstrap-3.3.4/less/list-group.less";
-@import "../bootstrap-3.3.4/less/panels.less";
-@import "../bootstrap-3.3.4/less/responsive-embed.less";
-@import "../bootstrap-3.3.4/less/wells.less";
-@import "../bootstrap-3.3.4/less/close.less";
+@import "../bootstrap/less/component-animations.less";
+@import "../bootstrap/less/dropdowns.less";
+@import "../bootstrap/less/button-groups.less";
+@import "../bootstrap/less/input-groups.less";
+@import "../bootstrap/less/navs.less";
+@import "../bootstrap/less/navbar.less";
+@import "../bootstrap/less/breadcrumbs.less";
+@import "../bootstrap/less/pagination.less";
+@import "../bootstrap/less/pager.less";
+@import "../bootstrap/less/labels.less";
+@import "../bootstrap/less/badges.less";
+@import "../bootstrap/less/jumbotron.less";
+@import "../bootstrap/less/thumbnails.less";
+@import "../bootstrap/less/alerts.less";
+@import "../bootstrap/less/progress-bars.less";
+@import "../bootstrap/less/media.less";
+@import "../bootstrap/less/list-group.less";
+@import "../bootstrap/less/panels.less";
+@import "../bootstrap/less/responsive-embed.less";
+@import "../bootstrap/less/wells.less";
+@import "../bootstrap/less/close.less";
 
 // Components w/ JavaScript
-@import "../bootstrap-3.3.4/less/modals.less";
-@import "../bootstrap-3.3.4/less/tooltip.less";
-@import "../bootstrap-3.3.4/less/popovers.less";
-@import "../bootstrap-3.3.4/less/carousel.less";
+@import "../bootstrap/less/modals.less";
+@import "../bootstrap/less/tooltip.less";
+@import "../bootstrap/less/popovers.less";
+@import "../bootstrap/less/carousel.less";
 
 // Utility classes
-@import "../bootstrap-3.3.4/less/utilities.less";
-@import "../bootstrap-3.3.4/less/responsive-utilities.less";
+@import "../bootstrap/less/utilities.less";
+@import "../bootstrap/less/responsive-utilities.less";
 
 // Yamm3
-@import "../yamm3-master/yamm/yamm.less";
+@import "../yamm3/yamm/yamm.less";
 
 // Bootgenie
 @import "bootgenie.less";
