Replace navbar selected classes and fix images

--- a/assets/css/bootgenie.css
+++ b/assets/css/bootgenie.css
@@ -6572,6 +6572,10 @@ button.close {
   left: 0;
   right: 0;
 }
+.nav li img {
+  float: left;
+  margin-right: 10px;
+}
 .logo,
 .logo_name {
   float: left;
