--- a/sources/less/bootgenie.less
+++ b/sources/less/bootgenie.less
@@ -1,5 +1,6 @@
 // Bootgenie specific style definitions
 
+// Page header
 .logo, .logo_name {
 	float: left;
 }
@@ -8,6 +9,13 @@
 	margin-right: 15px;
 }
 
+// Navigation
+.nav li img {
+	float: left;
+	margin-right: 5px;
+}
+
+// Page footer
 footer {
 	margin-top: 15px;
 }
