Add wiki sidebar styling

--- a/sources/less/bootgenie.less
+++ b/sources/less/bootgenie.less
@@ -30,6 +30,30 @@
   color: #CCC;
 }
 
+// Layout
+
+.main-wrapper {
+  .make-row();
+}
+
+.main-wrapper .sidebar {
+  .make-lg-column(4);
+  .make-md-column(4);
+  .make-sm-column(4);
+}
+
+.main-wrapper .main {
+  .make-lg-column(8);
+  .make-md-column(8);
+  .make-sm-column(8);
+}
+
+// Main
+
+.list-group-item img {
+  margin-right: 5px;
+}
+
 // Page footer
 footer {
   margin-top: 15px;
