--- a/assets/css/bootgenie.css
+++ b/assets/css/bootgenie.css
@@ -6283,7 +6283,9 @@ button.close {
 .panel-body:before,
 .panel-body:after,
 .modal-footer:before,
-.modal-footer:after {
+.modal-footer:after,
+.main-wrapper:before,
+.main-wrapper:after {
   content: " ";
   display: table;
 }
@@ -6301,7 +6303,8 @@ button.close {
 .navbar-collapse:after,
 .pager:after,
 .panel-body:after,
-.modal-footer:after {
+.modal-footer:after,
+.main-wrapper:after {
   clear: both;
 }
 .center-block {
@@ -6593,6 +6596,61 @@ button.close {
   content: none;
   padding: 0px 5px;
   color: #CCC;
+}
+.main-wrapper {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.main-wrapper .sidebar {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 1200px) {
+  .main-wrapper .sidebar {
+    float: left;
+    width: 33.33333333%;
+  }
+}
+@media (min-width: 992px) {
+  .main-wrapper .sidebar {
+    float: left;
+    width: 33.33333333%;
+  }
+}
+@media (min-width: 768px) {
+  .main-wrapper .sidebar {
+    float: left;
+    width: 25%;
+  }
+}
+.main-wrapper .main {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 1200px) {
+  .main-wrapper .main {
+    float: left;
+    width: 66.66666667%;
+  }
+}
+@media (min-width: 992px) {
+  .main-wrapper .main {
+    float: left;
+    width: 66.66666667%;
+  }
+}
+@media (min-width: 768px) {
+  .main-wrapper .main {
+    float: left;
+    width: 75%;
+  }
+}
+.list-group-item img {
+  margin-right: 5px;
 }
 footer {
   margin-top: 15px;
