--- a/sources/styles/bootgenie.scss
+++ b/sources/styles/bootgenie.scss
@@ -15,13 +15,54 @@
 #main-menu {
   @extend .nav;
   @extend .navbar-nav;
+  @extend .yamm;
 }
 
 #user-menu {
   @extend .nav;
   @extend .navbar-nav;
   @extend .navbar-right;
+  @extend .yamm;
 }
+
+// Override yamm-content padding
+.yamm-content,
+.yamm .yamm-content {
+  padding: 3px 20px;
+}
+
+.dropdown-menu > li > div {
+  @extend .yamm-content;
+}
+
+.dropdown-menu h3 {
+  font-size: 1.2em;
+  line-height: $line-height-base;
+  margin: 3px 0;
+}
+
+// Links within the dropdown menu
+.dropdown-menu > li > div a {
+    display: block;
+    padding: 3px 20px;
+    margin: 0 -20px;
+    clear: both;
+    font-weight: normal;
+    line-height: $line-height-base;
+    color: $dropdown-link-color;
+    white-space: nowrap; // prevent links from randomly breaking onto new lines
+}
+
+// Hover/Focus state
+.dropdown-menu > li > div a {
+  &:hover,
+  &:focus {
+    text-decoration: none;
+    color: $dropdown-link-hover-color;
+    background-color: $dropdown-link-hover-bg;
+  }
+}
+
 
 // Breadcrumb
 
