Cleanup markup and styles for publish menu

--- a/sources/styles/bootgenie.scss
+++ b/sources/styles/bootgenie.scss
@@ -25,6 +25,11 @@
   @extend .yamm;
 }
 
+.dropdown-menu {
+  // form labels need to fit
+  min-width: 350px;
+}
+
 // Override yamm-content padding
 .yamm-content,
 .yamm .yamm-content {
