Add section-separator markup

--- a/sources/styles/bootgenie.scss
+++ b/sources/styles/bootgenie.scss
@@ -141,6 +141,40 @@
   @include make-md-column(4);
 }
 
+.section-separator {
+  display: block;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap; 
+  margin: 20px 0;
+
+  > span {
+    position: relative;
+    display: inline-block;
+    font-size: 1.6em;
+  }
+
+  > span:before,
+  > span:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    width: 9999px;
+    height: 1px;
+    background: $gray-lighter;
+  }
+
+  > span:before {
+    right: 100%;
+    margin-right: 15px;
+  }
+
+  > span:after {
+    left: 100%;
+    margin-left: 15px;
+  }
+}
+
 /**
  * Forms
  * 
